Fix count labels bottom spacing, adjust board-manager area margins

--- a/sass/blocks/_boss-board.sass
+++ b/sass/blocks/_boss-board.sass
@@ -522,7 +522,6 @@ $block: ".boss-board"
   &__manager-stats
     display: block
     width: 100%
-    padding: 0 0 5px
 
     // $Board manager area stats MOD: layout row
     &_layout_row
@@ -530,6 +529,7 @@ $block: ".boss-board"
       flex-direction: row
       justify-content: flex-start
       align-items: flex-start
+      margin-bottom: 15px
 
       @media screen and (max-width: 960px)
         flex-direction: column
