--- a/sass/blocks/_boss-count.sass
+++ b/sass/blocks/_boss-count.sass
@@ -85,7 +85,10 @@ $block: ".boss-count"
 
   // $Count MOD: type badge adjust flow
   &_type_badge#{&}_adjust_flow
-    margin-bottom: 15px
+    margin-bottom: 40px
+
+    @media screen and (max-width: 960px)
+      margin-bottom: 30px
 
   &_type_badge#{&}_adjust_row,
   &_type_badge#{&}_adjust_flow
